# ChatKobi.AI

./: .gitignore  0.2.1.iss  README.md  chain.py  config.json  convert.py  fine_tuning.ipynb  index.py  jaro_sentence.txt  load_model.py  main.py  requirements.txt
App/: config.json  load_model.py  main.py  package-lock.json  server.py
App-lite/: main.py
App/pages/: index.js
UI/: README.md  dataset.json  font.css  index.html  script.js  style.css
app/: How-to.md  package-lock.json  package.json
app-build/: 0.2.3.iss  README.md  app.py  chatkobi.iss  chatkobi.py  config.json  extract_ds.py  how-to.md  index_obat.csv  load_model.py  requirements.txt  setup.py  setup_app.py
app/pages/: Popup.jsx  index.js  index.jsx
app/src-tauri/: tauri.conf.json
app/styles/: Home.module.css  globals.css
chatkobi/: main.js  package-lock.json  package.json
chatkobi/pages/: index.js
chatkobi_mobile/: pubspec.yaml
chatkobi_mobile/drug_data/: abacavir.txt  abrocitinib.txt  acarbose.txt  ace-inhibitor.txt  acebutolol.txt  acetazolamide.txt  acetylcysteine-inhalasi.txt  acetylcysteine.txt  acifar-cream.txt  acitretin.txt  aclidinium.txt  actemra.txt  actifed.txt  acyclovir-tablet.txt  acyclovir-topikal.txt  adalimumab.txt  adapalene.txt  adefovir.txt  adenosine.txt  agonis-beta.txt  ailin-cool.txt  albendazole.txt  albumin.txt  alendronate.txt  alfentanil.txt  alfuzosin.txt  aliskiren.txt  alitretinoin.txt  alleron.txt  allopurinol.txt  allylestrenol.txt  alogliptin.txt  alpara.txt  alpha-lipoic-acid.txt  alprazolam.txt  alteplase.txt  aluminium-hidroksida.txt  ambroxol-indofarma.txt  ambroxol.txt  amfetamin.txt  (+1154 more)
chatkobi_mobile/lib/: about.dart  api.dart  bridge_definitions.dart  chat.dart  (+4 more)
chatkobi_mobile/native/: Cargo.toml
chatkobi_mobile/native/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs
rust/: .gitignore  Cargo.toml  app.rs  infer_test.rs
server/: app.py  config.json  load_model.py  setup.py
whatsapp-bot/: .gitignore  LICENSE  README.md  package-lock.json  package.json  startup.sh
(+14 files in other folders)
