[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
llm = { git = "https://github.com/rustformers/llm" , branch = "main" }
rand = "0.8.5"
pyo3 = "0.15"
llm-chain = "0.12.0"
langchain = "0.2.2"

[[bin]]
name = "rust"
path = "main.rs"
