[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
llm = { git = "https://github.com/rustformers/llm" , branch = "main" }
llm-chain = "0.12.3"
llm-chain-local = "0.12.3"
tokio = { version = "1.32.0", features = ["full"] }

[[bin]]
name = "rust"
path = "main.rs"
